@@ -2,14 +2,14 @@ package com.sprint.mission.monew.domain.interest.mapper;
 
 import com.sprint.mission.monew.domain.interest.dto.InterestResponse;
 import com.sprint.mission.monew.domain.interest.entity.Interest;
-import java.util.stream.Collectors;
+import com.sprint.mission.monew.domain.interest.entity.InterestKeyword;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
-@Mapper(componentModel = "spring", imports = Collectors.class)
+@Mapper(componentModel = "spring", imports = InterestKeyword.class)
 public interface InterestMapper {
 
   @Mapping(target = "subscribedByMe", constant = "false")
-  @Mapping(target = "keywords", expression = "java(interest.getKeywords().stream().map(k -> k.getKeyword()).collect(Collectors.toList()))")
+  @Mapping(target = "keywords", expression = "java(interest.getKeywords().stream().map(InterestKeyword::getKeyword).toList())")
   InterestResponse toResponse(Interest interest);
 }
